k8s-config/app-deploy-default-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoappdb-deployment
  labels:
    app: demoappdb
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  replicas: 3
  selector:
    matchLabels:
      app: demoappdb
  template:
    metadata:
      labels:
        app: demoappdb
    spec:
      containers:
      - name: demoappdb
        image: pj62acrepam01.azurecr.io/static-website-image-db:latest
        ports:
        - containerPort: 80
