k8s-config/app-cip-service.yml
kind: Service
apiVersion: v1
metadata:
  name: appcipservice
spec:
  selector:
    app: demoapp
  ports:
    - port: 80 # Default port for image
